--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @font-face{
     font-family:"RobotoRegular";
     src:
-        local("Roboto Regular"), url("/assets/fonts/Roboto-Regular.ttf");
+        local("Roboto Regular"), url("https://tonilocke.github.io/newsletter-signup-form//assets/fonts/Roboto-Regular.ttf");
     font-weight: 400;
 }
 @font-face {
     font-family: "RobotoBold";
-    src: local("Roboto Bold"), url("/assets/fonts/Roboto-Bold.ttf");
+    src: local("Roboto Bold"), url("https://tonilocke.github.io/newsletter-signup-form//assets/fonts/Roboto-Bold.ttf");
     font-weight: 700;
 }
 
